test/parsing/errors/typeCannotImplementInterface.compopts
--detailed-errors # typeCannotImplementInterface-detailed.good
--no-detailed-errors # typeCannotImplementInterface-brief.good
